@@ -1,0 +1,13 @@
+decorations none
+transparent false
+geometry 5x1-325-10
+max_geometry 5x1-325-10
+background "#000000"
+kludges force_icons_size
+grow_gravity NE
+icon_gravity NE
+icon_size 12
+sticky true
+window_type dock
+window_layer bottom
+skip_taskbar true
